reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_enum_variant_typevar-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: <\nTestIngestRelation<TestFlattenIdent, TestFlattenIdentData> > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


class ReflectapiDemoTestsSerdeTestFlattenIdent(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    job_id: int


class ReflectapiDemoTestsSerdeTestFlattenIdentData(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    payload: str


class ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4(
    BaseModel
):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    job_id: int
    payload: str


class ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant(
    BaseModel
):
    """Insert variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: reflectapi_demo.tests.serde.TestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4


class ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant(
    BaseModel
):
    """Remove variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: reflectapi_demo.tests.serde.TestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4


# Externally tagged enum using RootModel
ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451Variants = Union[
    ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant,
    ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant,
    Literal["Empty"],
]


class ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451(
    RootModel[
        ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451Variants
    ]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Insert": lambda v: (
                    ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant(
                        field_0=v
                    )
                ),
                "Remove": lambda v: (
                    ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant(
                        field_0=v
                    )
                ),
                "Empty": "_unit",
            },
            (
                ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant,
                ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant,
            ),
            "ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Insert": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant,
                    ),
                    lambda r: {"Insert": r.field_0},
                ),
                "Remove": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant,
                    ),
                    lambda r: {"Remove": r.field_0},
                ),
                "Empty": (lambda r: r == "Empty", lambda r: "Empty"),
            },
            "ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TestFlattenIdent = ReflectapiDemoTestsSerdeTestFlattenIdent
            TestFlattenIdentData = ReflectapiDemoTestsSerdeTestFlattenIdentData
            TestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4 = ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4
            TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant = ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451InsertVariant
            TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant = ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451RemoveVariant
            TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451 = ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451]: Response containing reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451 data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451]: Response containing reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451 data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsSerdeTestFlattenIdent,
    ReflectapiDemoTestsSerdeTestFlattenIdentData,
    ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4,
    ReflectapiDemoTestsSerdeTestIngestRelationReflectapiDemoTestsSerdeTestFl0a834451,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
