reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_enum_variant_typevar.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestIngestRelation",
        "arguments": [
          {
            "name": "reflectapi_demo::tests::serde::TestFlattenIdent"
          },
          {
            "name": "reflectapi_demo::tests::serde::TestFlattenIdentData"
          }
        ]
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestIngestRelation",
        "arguments": [
          {
            "name": "reflectapi_demo::tests::serde::TestFlattenIdent"
          },
          {
            "name": "reflectapi_demo::tests::serde::TestFlattenIdentData"
          }
        ]
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIdent",
        "fields": {
          "named": [
            {
              "name": "job_id",
              "type": {
                "name": "u64"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIdentData",
        "fields": {
          "named": [
            {
              "name": "payload",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestIdentityData",
        "parameters": [
          {
            "name": "I"
          },
          {
            "name": "D"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "identity",
              "type": {
                "name": "I"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "data",
              "type": {
                "name": "D"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestIngestRelation",
        "parameters": [
          {
            "name": "I"
          },
          {
            "name": "D"
          }
        ],
        "variants": [
          {
            "name": "Insert",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::TestIdentityData",
                    "arguments": [
                      {
                        "name": "I"
                      },
                      {
                        "name": "D"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Remove",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::TestIdentityData",
                    "arguments": [
                      {
                        "name": "I"
                      },
                      {
                        "name": "D"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Empty",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIdent",
        "fields": {
          "named": [
            {
              "name": "job_id",
              "type": {
                "name": "u64"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIdentData",
        "fields": {
          "named": [
            {
              "name": "payload",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestIdentityData",
        "parameters": [
          {
            "name": "I"
          },
          {
            "name": "D"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "identity",
              "type": {
                "name": "I"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "data",
              "type": {
                "name": "D"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestIngestRelation",
        "parameters": [
          {
            "name": "I"
          },
          {
            "name": "D"
          }
        ],
        "variants": [
          {
            "name": "Insert",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::TestIdentityData",
                    "arguments": [
                      {
                        "name": "I"
                      },
                      {
                        "name": "D"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Remove",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::TestIdentityData",
                    "arguments": [
                      {
                        "name": "I"
                      },
                      {
                        "name": "D"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Empty",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      }
    ]
  }
}
