reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_leaf_collision-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestLeafCollisionPair > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestLeafCollisionPair,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.TestLeafCollisionPair, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenIfElse {
        code: number /* u16 */;
      }

      export interface TestLeafCollisionPair {
        a: reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.module_a.Sample,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >;
        b: reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.module_b.Sample,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >;
      }

      export type TestUpdateOrElse<T, C> = {
        if_else: C | null;
      } & NullToEmptyObject<T>;

      export namespace module_a {
        export interface Sample {
          a_field: number /* u32 */;
        }
      }

      export namespace module_b {
        export interface Sample {
          b_field: boolean;
        }
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestLeafCollisionPair,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestLeafCollisionPair,
        {},
        reflectapi_demo.tests.serde.TestLeafCollisionPair,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
