reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_leaf_collision-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestLeafCollisionPair"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestLeafCollisionPair"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "bool": {
        "description": "Boolean value",
        "type": "boolean"
      },
      "reflectapi_demo.tests.serde.TestFlattenIfElse": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenIfElse",
        "required": [
          "code"
        ],
        "properties": {
          "code": {
            "$ref": "#/components/schemas/u16"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestLeafCollisionPair": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestLeafCollisionPair",
        "required": [
          "a",
          "b"
        ],
        "properties": {
          "a": {
            "allOf": [
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.module_a.Sample"
              },
              {
                "type": "object",
                "title": "reflectapi_demo.tests.serde.TestUpdateOrElse<reflectapi_demo.tests.serde.module_a.Sample, reflectapi_demo.tests.serde.TestFlattenIfElse>",
                "required": [
                  "if_else"
                ],
                "properties": {
                  "if_else": {
                    "oneOf": [
                      {
                        "description": "Null",
                        "type": "null"
                      },
                      {
                        "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIfElse"
                      }
                    ]
                  }
                }
              }
            ]
          },
          "b": {
            "allOf": [
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.module_b.Sample"
              },
              {
                "type": "object",
                "title": "reflectapi_demo.tests.serde.TestUpdateOrElse<reflectapi_demo.tests.serde.module_b.Sample, reflectapi_demo.tests.serde.TestFlattenIfElse>",
                "required": [
                  "if_else"
                ],
                "properties": {
                  "if_else": {
                    "oneOf": [
                      {
                        "description": "Null",
                        "type": "null"
                      },
                      {
                        "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIfElse"
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      },
      "reflectapi_demo.tests.serde.module_a.Sample": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.module_a.Sample",
        "required": [
          "a_field"
        ],
        "properties": {
          "a_field": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "reflectapi_demo.tests.serde.module_b.Sample": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.module_b.Sample",
        "required": [
          "b_field"
        ],
        "properties": {
          "b_field": {
            "$ref": "#/components/schemas/bool"
          }
        }
      },
      "u16": {
        "description": "16-bit unsigned integer",
        "type": "integer"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
